# django-X

./: pyproject.toml
config/: urls.py
snacks/: admin.py  urls.py  views.py
templates/: _base.html
templates/snacks/: snack_create.html  snack_delete.html  snack_detail.html  snack_list.html  snack_update.html  snacks_base.html
